@@ -13,6 +13,7 @@ import com.fs.starfarer.api.fleet.FleetMemberAPI;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import org.apache.log4j.Level;
 import org.lazywizard.lazylib.CollectionUtils;
 import org.lazywizard.lazylib.MathUtils;
 import org.lwjgl.util.vector.Vector2f;
@@ -407,6 +408,8 @@ public class CombatUtils
     @Deprecated
     public static CombatEngineAPI getCombatEngine()
     {
+        Global.getLogger(CombatUtils.class).log(Level.WARN,
+                "Using deprecated method getCombatEngie()");
         return Global.getCombatEngine();
     }
 
@@ -417,11 +420,13 @@ public class CombatUtils
     @Deprecated
     public static float getElapsedCombatTimeIncludingPaused()
     {
+        Global.getLogger(CombatUtils.class).log(Level.WARN,
+                "Using deprecated method getElapsedCombatTimeIncludingPaused()");
         if (Global.getCombatEngine() == null)
         {
             return 0f;
         }
-        
+
         return Global.getCombatEngine().getTotalElapsedTime(true);
     }
 
@@ -432,6 +437,8 @@ public class CombatUtils
     @Deprecated
     public static float getElapsedCombatTime()
     {
+        Global.getLogger(CombatUtils.class).log(Level.WARN,
+                "Using deprecated method getElapsedCombatTime()");
         if (Global.getCombatEngine() == null)
         {
             return 0f;
@@ -447,6 +454,8 @@ public class CombatUtils
     @Deprecated
     public static float getTimeSinceLastFrame()
     {
+        Global.getLogger(CombatUtils.class).log(Level.WARN,
+                "Using deprecated method getTimeSinceLastFrame()");
         if (Global.getCombatEngine() == null)
         {
             return 0f;
